fixed single button line layout issue; fixed succeeded page links

--- a/app-dev/styles/base/base.css
+++ b/app-dev/styles/base/base.css
@@ -143,6 +143,11 @@ button {
 	letter-spacing: 0.05em;
 	}
 
+	*[role="button"],
+	button {
+		text-align: center;
+	}
+
 	*[role="button"] > .label,
 	button > .label {
 		display: block;
