--- a/app-dev/styles/base/layout.css
+++ b/app-dev/styles/base/layout.css
@@ -60,12 +60,14 @@ button.nav-back::before,
 article.message {
 	text-align: center;
 	padding-top: 0.25rem;
-	padding-bottom: 1rem;
-}
-
-article.message p {
-	letter-spacing: 0.075em;
-}
+	padding-bottom: 0.25rem;
+	}
+	article.message p {
+		letter-spacing: 0.075em;
+	}
+	article.message p:last-child {
+		margin-bottom: 0;
+	}
 
 
 .info-subject-symbol {
@@ -108,6 +110,10 @@ article.message p {
 		position: relative;
 		padding-top: 0.5rem;
 		padding-bottom: 0.5rem;
+	}
+
+	.row.buttons-in-single-line + .row.buttons-in-single-line {
+		margin-top: -0.75rem;
 	}
 
 	.page-footer .row.buttons-in-single-line {
